--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -33,11 +33,12 @@ jobs:
       - name: Run bundle
         run: deno bundle -c main.tsconfig.json --unstable main.ts main.bundle.js
         
-      - name: Commit files
+      - name: Add and Commit files
         run: |
           git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git commit -m "Add changes" -a
+          git config --local user.name "Github Actions"
+          git add main.bundle.js
+          git commit -m "bundle By Github Actions" -a
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
